feat: 챌린지 외 추가된 업적 조회 기능 추가